<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/raleway_bold"
        android:textSize="30sp"
        >

    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/personalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="@id/settingsText"
        app:layout_constraintTop_toBottomOf="@id/settingsText"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/raleway_bold"
        android:textSize="24sp"
        >

    </com.google.android.material.textview.MaterialTextView>

 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/personalSettingsRecView"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginRight="20dp"
     android:layout_marginTop="30dp"
     app:layout_constraintTop_toBottomOf="@id/personalText"
     app:layout_constraintLeft_toLeftOf="@id/personalText"
     app:layout_constraintRight_toRightOf="parent"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     android:orientation="vertical"
     >

 </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="@id/personalSettingsRecView"
        app:layout_constraintTop_toBottomOf="@id/personalSettingsRecView"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/raleway_bold"
        android:textSize="24sp"
        >

    </com.google.android.material.textview.MaterialTextView>



  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/accountSettingsRecView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      android:orientation="vertical"
      app:layout_constraintLeft_toLeftOf="@id/accountText"
      app:layout_constraintRight_toRightOf="@id/personalSettingsRecView"
      app:layout_constraintTop_toBottomOf="@id/accountText"
      >

  </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/primary_blue"
        app:cornerRadius="16dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/logout"
        android:textSize="22sp"
        android:textColor="@color/button_text_white"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_sans_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountSettingsRecView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        app:lottie_renderMode="automatic">

    </com.airbnb.lottie.LottieAnimationView>
</androidx.constraintlayout.widget.ConstraintLayout>